@@ -22,8 +22,6 @@
 * This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
-require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_Autoloader.php');
-
 /**
  * Abstract class 'tx_oelib_abstractMailer' for the 'oelib' extension.
  * This class declares the function sendEmail() for its inheritants. So they
