@@ -24,8 +24,6 @@
 
 require_once(PATH_t3lib . 'class.t3lib_page.php');
 
-require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_Autoloader.php');
-
 /**
  * Class 'tx_oelib_db' for the 'oelib' extension.
  *
