@@ -21,8 +21,6 @@
 * This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
-require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_Autoloader.php');
-
 /**
  * This is mere a class to test the configuration check class in the 'oelib'
  * extension.
