@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2542] Change: Remove the Autoloader includes from all oelib non-test classes except for the templatehelper
 - [#2494] Change: The autoloader should include the constants
 - [#2456] Feature: Add lazy loading for models
 
